examples/test/testpolicy15433.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15433
  namespace: namespace206
spec:
  podSelector:
    matchLabels:
      key30: value38
      key28: value45
      key4: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value24
          key17: value9
          key43: value20
